Bug 1357872, nsPresContext is refcounted, so use it so, r=kats